@@ -5,19 +5,20 @@
 django-impersonate |nlshield|
 ==============================
 :Info: Simple application to allow superusers to "impersonate" other non-superuser accounts.
-:Version: 1.0
+:Version: 1.1
 :Author: Peter Sanchez (http://www.petersanchez.com)
 
 Dependencies
 ============
 
-* It was written for Python 2.7+ and Django 1.7+
+* It was written for Python 2.7+ and Django 1.8+
 * Python 3.3+ is supported but Python 3.4+ is required for Django 1.9+
 * It depends on your project using the django.contrib.session framework.
 
 **NOTE:**
 
 * **Version 1.0 adds new functionality by default.** Please see the IMPERSONATE_DISABLE_LOGGING setting section.
+* If you need to use this with Django older than 1.8, please use version django-impersonate == 1.0.1
 * If you need to use this with Django older than 1.7, please use version django-impersonate == 0.9.2
 * **Version 0.9.2 partially reverts work completed in version 0.9.1.** This is because work done to address a request in `Issue #17 <https://bitbucket.org/petersanchez/django-impersonate/issues/17/remember-where-to-return-to-after>`_ broke default behavior for all previous versions. `Issue #24 <https://bitbucket.org/petersanchez/django-impersonate/issues/24/impersonate_redirect_url-no-longer-works>`_ was opened and the fix was released in 0.9.2 to address it. Please see the new IMPERSONATE_USE_HTTP_REFERER setting.
 * If you need to use this with Django older than 1.4, please use version django-impersonate == 0.5.3
@@ -332,18 +333,17 @@ If you're bored and want to test all the supported environments, you'll need tox
 
 And you should see::
 
+    py3.5-django1.10: commands succeeded
     py3.5-django1.9: commands succeeded
     py3.5-django1.8: commands succeeded
+    py3.4-django1.10: commands succeeded
     py3.4-django1.9: commands succeeded
     py3.4-django1.8: commands succeeded
-    py3.4-django1.7: commands succeeded
     py3.3-django1.8: commands succeeded
-    py3.3-django1.7: commands succeeded
+    py2.7-django1.10: commands succeeded
     py2.7-django1.9: commands succeeded
     py2.7-django1.8: commands succeeded
-    py2.7-django1.7: commands succeeded
     congratulations :)
-
 
 Copyright & Warranty
 ====================
