@@ -40,11 +40,32 @@ settings.configure(
             # },
         # },
     # },
+    # Both MIDDLEWARE and MIDDLEWARE_CLASSES for testing purposes.
+    MIDDLEWARE=(
+        'django.contrib.sessions.middleware.SessionMiddleware',
+        'django.contrib.auth.middleware.AuthenticationMiddleware',
+        'impersonate.middleware.ImpersonateMiddleware',
+    ),
     MIDDLEWARE_CLASSES=(
         'django.contrib.sessions.middleware.SessionMiddleware',
         'django.contrib.auth.middleware.AuthenticationMiddleware',
         'impersonate.middleware.ImpersonateMiddleware',
     ),
+    TEMPLATES = [
+    {
+        'BACKEND': 'django.template.backends.django.DjangoTemplates',
+        'DIRS': [],
+        'APP_DIRS': True,
+        'OPTIONS': {
+            'context_processors': [
+                'django.template.context_processors.debug',
+                'django.template.context_processors.request',
+                'django.contrib.auth.context_processors.auth',
+                'django.contrib.messages.context_processors.messages',
+            ],
+        },
+    },
+    ],
     INSTALLED_APPS=(
         'django.contrib.auth',
         'django.contrib.contenttypes',
