@@ -1,9 +1,13 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
-envlist = py3.5-django1.9,py3.5-django1.8,py3.4-django1.9,py3.4-django1.8,py3.4-django1.7,py3.3-django1.8,py3.3-django1.7,py2.7-django1.9,py2.7-django1.8,py2.7-django1.7
+envlist = py3.5-django1.10,py3.5-django1.9,py3.5-django1.8,py3.4-django1.10,py3.4-django1.9,py3.4-django1.8,py3.3-django1.8,py2.7-django1.10,py2.7-django1.9,py2.7-django1.8
 
 [testenv]
 commands = {envpython} runtests.py
+
+[testenv:py3.5-django1.10]
+basepython = python3.5
+deps = django==1.10.1
 
 [testenv:py3.5-django1.9]
 basepython = python3.5
@@ -13,6 +17,10 @@ deps = django==1.9.6
 basepython = python3.5
 deps = django==1.8.13
 
+[testenv:py3.4-django1.10]
+basepython = python3.4
+deps = django==1.10.1
+
 [testenv:py3.4-django1.9]
 basepython = python3.4
 deps = django==1.9.6
@@ -21,17 +29,14 @@ deps = django==1.9.6
 basepython = python3.4
 deps = django==1.8.13
 
-[testenv:py3.4-django1.7]
-basepython = python3.4
-deps = django==1.7.11
-
 [testenv:py3.3-django1.8]
 basepython = python3.3
 deps = django==1.8.13
 
-[testenv:py3.3-django1.7]
-basepython = python3.3
-deps = django==1.7.11
+[testenv:py2.7-django1.10]
+basepython = python2.7
+deps = django==1.10.1
+       factory-boy==1.3.0
 
 [testenv:py2.7-django1.9]
 basepython = python2.7
@@ -41,9 +46,4 @@ deps = django==1.9.6
 [testenv:py2.7-django1.8]
 basepython = python2.7
 deps = django==1.8.13
-       factory-boy==1.3.0
-
-[testenv:py2.7-django1.7]
-basepython = python2.7
-deps = django==1.7.11
        factory-boy==1.3.0
